[package]
name = "locspan-derive"
version = "0.3.0"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "Derive macros for the `locspan` code mapping library"
categories = ["parsing"]
keywords = ["source", "code", "map", "span", "derive"]
repository = "https://github.com/timothee-haudebourg/locspan-derive"
documentation = "https://docs.rs/locspan-derive"
license = "MIT/Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"

[dev-dependencies]
locspan = "0.5.0"